topconfig enable CFQ_GROUP_IOSCHED
svn path=/dists/trunk/linux-2.6/; revision=15776

--- a/debian/config/config
+++ b/debian/config/config
@@ -12,6 +12,8 @@ CONFIG_BLK_DEV_INTEGRITY=y
 CONFIG_IOSCHED_AS=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_CFQ_GROUP_IOSCHED=y
+# CONFIG_DEBUG_CFQ_IOSCHED is not set
 ## choice: Default I/O scheduler
 # CONFIG_DEFAULT_AS is not set
 # CONFIG_DEFAULT_DEADLINE is not set
