x86 enable modular X86_PCC_CPUFREQ
svn path=/dists/trunk/linux-2.6/; revision=15777

--- a/debian/config/kernelarch-x86/config
+++ b/debian/config/kernelarch-x86/config
@@ -93,6 +93,7 @@ CONFIG_OPTIMIZE_INLINING=y
 ##
 ## file: arch/x86/kernel/cpu/cpufreq/Kconfig
 ##
+CONFIG_X86_PCC_CPUFREQ=m
 CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_SPEEDSTEP_CENTRINO=m
 # CONFIG_X86_P4_CLOCKMOD is not set
