topconfig explicitly enable BRIDGE_IGMP_SNOOPING
defaults to y, thus already enabled on previous upload.

svn path=/dists/trunk/linux-2.6/; revision=15778

--- a/debian/config/config
+++ b/debian/config/config
@@ -3527,6 +3527,7 @@ CONFIG_BT_RFCOMM_TTY=y
 ## file: net/bridge/Kconfig
 ##
 CONFIG_BRIDGE=m
+CONFIG_BRIDGE_IGMP_SNOOPING=y
 
 ##
 ## file: net/bridge/netfilter/Kconfig
