topconfig explicitly unset ATH_DEBUG
svn path=/dists/trunk/linux-2.6/; revision=15779

--- a/debian/config/config
+++ b/debian/config/config
@@ -1740,6 +1740,7 @@ CONFIG_MWL8K=m
 ## file: drivers/net/wireless/ath/Kconfig
 ##
 CONFIG_ATH_COMMON=m
+# CONFIG_ATH_DEBUG is not set
 
 ##
 ## file: drivers/net/wireless/ath/ar9170/Kconfig
