--- a/debian/config/config
+++ b/debian/config/config
@@ -2198,6 +2198,7 @@ CONFIG_SERIAL_8250_BOCA=m
 CONFIG_SERIAL_8250_HUB6=m
 CONFIG_SERIAL_8250_MCA=m
 CONFIG_SERIAL_MAX3100=m
+# CONFIG_SERIAL_TIMBERDALE is not set
 
 ##
 ## file: drivers/spi/Kconfig
