topconfig enable modular MFD_WM8994
svn path=/dists/trunk/linux-2.6/; revision=15782

--- a/debian/config/config
+++ b/debian/config/config
@@ -1291,6 +1291,7 @@ CONFIG_MFD_SM501=m
 CONFIG_HTC_PASIC3=m
 CONFIG_TPS65010=m
 CONFIG_MFD_WM8400=m
+CONFIG_MFD_WM8994=m
 # CONFIG_MFD_WM831X is not set
 # CONFIG_MFD_WM8350_I2C is not set
 CONFIG_MFD_PCF50633=m
