topconfig enable modular REGULATOR_MAX8649 and REGULATOR_WM8994
svn path=/dists/trunk/linux-2.6/; revision=15783

--- a/debian/config/config
+++ b/debian/config/config
@@ -1964,10 +1964,12 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=m
 CONFIG_REGULATOR_USERSPACE_CONSUMER=m
 CONFIG_REGULATOR_BQ24022=m
 CONFIG_REGULATOR_MAX1586=m
+CONFIG_REGULATOR_MAX8649=m
 CONFIG_REGULATOR_MAX8660=m
 CONFIG_REGULATOR_WM831X=m
 CONFIG_REGULATOR_WM8350=m
 CONFIG_REGULATOR_WM8400=m
+CONFIG_REGULATOR_WM8994=m
 CONFIG_REGULATOR_PCF50633=m
 CONFIG_REGULATOR_LP3971=m
 CONFIG_REGULATOR_MC13783=m
