--- a/debian/config/config
+++ b/debian/config/config
@@ -3185,6 +3185,7 @@ CONFIG_QNX4FS_FS=m
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_PRINT_QUOTA_WARNING=y
+# CONFIG_QUOTA_DEBUG is not set
 CONFIG_QFMT_V1=m
 CONFIG_QFMT_V2=m
 
