topconfig enable modular VHOST_NET
svn path=/dists/trunk/linux-2.6/; revision=15788

--- a/debian/config/config
+++ b/debian/config/config
@@ -2651,6 +2651,11 @@ CONFIG_UWB_I1480U=m
 CONFIG_UWB_I1480U_WLP=m
 
 ##
+## file: drivers/vhost/Kconfig
+##
+CONFIG_VHOST_NET=m
+
+##
 ## file: drivers/video/Kconfig
 ##
 CONFIG_FIRMWARE_EDID=y
