topconfig explicitly enable modular LPC_SCH
defaults to m, so was already done in last upload.

svn path=/dists/trunk/linux-2.6/; revision=15789

--- a/debian/config/config
+++ b/debian/config/config
@@ -1301,6 +1301,7 @@ CONFIG_PCF50633_GPIO=m
 # CONFIG_AB3100_CORE is not set
 CONFIG_AB3100_OTP=m
 # CONFIG_EZX_PCAP is not set
+CONFIG_LPC_SCH=m
 
 ##
 ## file: drivers/misc/Kconfig
