--- a/debian/config/config
+++ b/debian/config/config
@@ -214,6 +214,7 @@ CONFIG_BT_HCIBTSDIO=m
 CONFIG_BT_HCIUART_LL=y
 CONFIG_BT_MRVL=m
 CONFIG_BT_MRVL_SDIO=m
+CONFIG_BT_ATH3K=m
 
 ##
 ## file: drivers/char/Kconfig
