Disable macvtap on OpenVZ
svn path=/dists/sid/linux-2.6/; revision=15798

--- a/debian/config/featureset-openvz/config
+++ b/debian/config/featureset-openvz/config
@@ -27,3 +27,5 @@ CONFIG_BC_PROC=y
 # buggy
 # CONFIG_NF_CONNTRACK_IPV6 is not set
 
+# OpenVZ replaces sock_alloc_send_pskb which breaks macvtap
+# CONFIG_MACVTAP is not set
