[sparc] Enable CONFIG_FB_XVR500, CONFIG_FB_XVR2500 (Closes: #508108)
svn path=/dists/sid/linux-2.6/; revision=15827

--- a/debian/config/sparc/config
+++ b/debian/config/sparc/config
@@ -455,6 +455,8 @@ CONFIG_FB_FFB=y
 # CONFIG_FB_CG14 is not set
 # CONFIG_FB_P9100 is not set
 # CONFIG_FB_LEO is not set
+CONFIG_FB_XVR500=y
+CONFIG_FB_XVR2500=y
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_NVIDIA is not set
 # CONFIG_FB_RIVA is not set
