--- a/debian/config/config
+++ b/debian/config/config
@@ -668,7 +668,8 @@ CONFIG_MISDN_AVMFRITZ=m
 CONFIG_MISDN_SPEEDFAX=m
 CONFIG_MISDN_INFINEON=m
 CONFIG_MISDN_W6692=m
-CONFIG_MISDN_NETJET=m
+#. Binds a generic PCI bridge
+# CONFIG_MISDN_NETJET is not set
 
 ##
 ## file: drivers/isdn/hysdn/Kconfig
