debian/config: Reorder.
svn path=/dists/sid/linux-2.6/; revision=15871

--- a/debian/config/config
+++ b/debian/config/config
@@ -188,8 +188,6 @@ CONFIG_EXTRA_FIRMWARE=""
 CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_LOOP=m
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
-CONFIG_BLK_DEV_DRBD=m
-# CONFIG_DRBD_FAULT_INJECTION is not set
 CONFIG_BLK_DEV_NBD=m
 CONFIG_BLK_DEV_OSD=m
 CONFIG_BLK_DEV_RAM=m
@@ -198,6 +196,12 @@ CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_ATA_OVER_ETH=m
 CONFIG_VIRTIO_BLK=m
 # CONFIG_BLK_DEV_HD is not set
+
+##
+## file: drivers/block/drbd/Kconfig
+##
+CONFIG_BLK_DEV_DRBD=m
+# CONFIG_DRBD_FAULT_INJECTION is not set
 
 ##
 ## file: drivers/bluetooth/Kconfig
