--- a/debian/config/sh4/config
+++ b/debian/config/sh4/config
@@ -1,49 +1,51 @@
-CONFIG_SUPERH=y
-CONFIG_SUPERH32=y
+##
+## file: arch/sh/Kconfig
+##
+CONFIG_SH_CPU_FREQ=y
+CONFIG_KEXEC=y
+CONFIG_SECCOMP=y
+CONFIG_SPARSE_IRQ=y
 
-#
-# System type
-#
-CONFIG_CPU_SH4=y
-
-#
-# Cache configuration
-#
-CONFIG_CACHE_WRITEBACK=y
-
-#
-# Processor features
-#
+##
+## file: arch/sh/Kconfig.cpu
+##
+## choice: Endianess selection
 CONFIG_CPU_LITTLE_ENDIAN=y
+## end choice
 CONFIG_SH_FPU=y
 CONFIG_SH_STORE_QUEUES=y
-CONFIG_CPU_HAS_INTEVT=y
-CONFIG_CPU_HAS_SR_RB=y
-CONFIG_CPU_HAS_FPU=y
 
-#
-# CPU Frequency scaling
-#
+##
+## file: arch/sh/drivers/Kconfig
+##
+CONFIG_HEARTBEAT=y
+
+##
+## file: arch/sh/mm/Kconfig
+##
+## choice: Cache mode
+CONFIG_CACHE_WRITEBACK=y
+## end choice
+
+##
+## file: drivers/cpufreq/Kconfig
+##
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_SH_CPU_FREQ=y
 
-#
-# Additional SuperH Device Drivers
-#
-CONFIG_HEARTBEAT=y
-
-#
-# Kernel features
-#
+##
+## file: kernel/Kconfig.hz
+##
+## choice: Timer frequency
 CONFIG_HZ_250=y
-CONFIG_HZ=250
-CONFIG_SCHED_HRTICK=y
-CONFIG_KEXEC=y
-CONFIG_SECCOMP=y
+## end choice
+
+##
+## file: kernel/Kconfig.preempt
+##
+## choice: Preemption Model
 CONFIG_PREEMPT_NONE=y
-CONFIG_GUSA=y
-CONFIG_SPARSE_IRQ=y
+## end choice
+
