* debian/changelog: Update. * debian/config: Disable ISDN_I4L and related options.
svn path=/dists/sid/linux-2.6/; revision=15872

--- a/debian/config/config
+++ b/debian/config/config
@@ -649,6 +649,12 @@ CONFIG_TOUCHSCREEN_TSC2007=m
 CONFIG_TOUCHSCREEN_W90X900=m
 
 ##
+## file: drivers/isdn/Kconfig
+##
+# CONFIG_ISDN is not set
+# CONFIG_ISDN_I4L is not set
+
+##
 ## file: drivers/isdn/capi/Kconfig
 ##
 CONFIG_CAPI_TRACE=y
