--- a/debian/config/kernelarch-x86/config
+++ b/debian/config/kernelarch-x86/config
@@ -1173,6 +1173,11 @@ CONFIG_RTL8192E=m
 CONFIG_RTL8192SU=m
 
 ##
+## file: drivers/staging/rtl8192u/Kconfig
+##
+CONFIG_RTL8192U=m
+
+##
 ## file: drivers/staging/usbip/Kconfig
 ##
 CONFIG_USB_IP_COMMON=m
