--- a/debian/config/armel/config
+++ b/debian/config/armel/config
@@ -87,3 +87,10 @@ CONFIG_KERNEL_LZMA=y
 CONFIG_ECONET_AUNUDP=y
 CONFIG_ECONET_NATIVE=y
 
+##
+### file: drivers/input/mouse/Kconfig
+##
+CONFIG_INPUT_MOUSE=y
+CONFIG_MOUSE_PS2=m
+CONFIG_MOUSE_APPLETOUCH=m
+
