--- a/debian/config/armel/config
+++ b/debian/config/armel/config
@@ -94,3 +94,9 @@ CONFIG_INPUT_MOUSE=y
 CONFIG_MOUSE_PS2=m
 CONFIG_MOUSE_APPLETOUCH=m
 
+##
+## file: drivers/input/misc/Kconfig
+##
+CONFIG_INPUT_MISC=y
+CONFIG_INPUT_UINPUT=m
+
