--- a/debian/config/config
+++ b/debian/config/config
@@ -3731,7 +3731,7 @@ CONFIG_NETFILTER_XT_MATCH_OSF=m
 ## file: net/netfilter/ipvs/Kconfig
 ##
 CONFIG_IP_VS=m
-# CONFIG_IP_VS_IPV6 is not set
+CONFIG_IP_VS_IPV6=y
 # CONFIG_IP_VS_DEBUG is not set
 CONFIG_IP_VS_TAB_BITS=12
 CONFIG_IP_VS_PROTO_TCP=y
