--- a/debian/config/kernelarch-x86/config
+++ b/debian/config/kernelarch-x86/config
@@ -4,7 +4,8 @@
 CONFIG_OPROFILE=m
 CONFIG_OPROFILE_IBS=y
 # CONFIG_OPROFILE_EVENT_MULTIPLEX is not set
-# CONFIG_KPROBES is not set
+CONFIG_KPROBES=y
+CONFIG_KRETPROBES=y
 
 ##
 ## file: arch/x86/Kconfig
