--- a/debian/templates/control.main.in
+++ b/debian/templates/control.main.in
@@ -1,5 +1,5 @@
 Package: linux-tools-@version@
-Architecture: amd64, hppa, i386, powerpc, s390, sh4, sparc, sparc64
+Architecture: amd64 hppa i386 powerpc s390 sh4 sparc sparc64
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: linux-base (>= 2.6.32-16)
 Suggests: linux-doc-@version@
