--- a/debian/config/config
+++ b/debian/config/config
@@ -313,6 +313,7 @@ CONFIG_EDAC_I82975X=m
 CONFIG_EDAC_I3200=m
 CONFIG_EDAC_X38=m
 CONFIG_EDAC_I5400=m
+CONFIG_EDAC_I7CORE=m
 CONFIG_EDAC_I5100=m
 
 ##
