Update config for changes to DETECT_SOFTLOCKUP and LOCKUP_DETECTOR
svn path=/dists/trunk/linux-2.6/; revision=16316

--- a/debian/config/hppa/config
+++ b/debian/config/hppa/config
@@ -590,7 +590,7 @@ CONFIG_ROOT_NFS=y
 ##
 ## file: lib/Kconfig.debug
 ##
-# CONFIG_DETECT_SOFTLOCKUP is not set
+# CONFIG_LOCKUP_DETECTOR is not set
 
 ##
 ## file: mm/Kconfig
