[x86] Set XEN_PLATFORM_PCI=y (matching squeeze)
svn path=/dists/trunk/linux-2.6/; revision=16334

--- a/debian/config/kernelarch-x86/config
+++ b/debian/config/kernelarch-x86/config
@@ -1290,6 +1290,7 @@ CONFIG_XEN_DEV_EVTCHN=m
 CONFIG_XENFS=m
 CONFIG_XEN_COMPAT_XENFS=y
 CONFIG_XEN_SYS_HYPERVISOR=y
+CONFIG_XEN_PLATFORM_PCI=y
 
 ##
 ## file: fs/partitions/Kconfig
