Explicitly unset various new Kconfig options
svn path=/dists/trunk/linux-2.6/; revision=16384

--- a/debian/config/config
+++ b/debian/config/config
@@ -93,6 +93,7 @@ CONFIG_ATA_VERBOSE_ERROR=y
 CONFIG_ATA_ACPI=y
 CONFIG_SATA_PMP=y
 CONFIG_SATA_AHCI=m
+# CONFIG_SATA_AHCI_PLATFORM is not set
 CONFIG_SATA_SIL24=m
 CONFIG_ATA_SFF=y
 CONFIG_SATA_SVW=m
@@ -178,6 +179,7 @@ CONFIG_ATM_SOLOS=m
 ##
 CONFIG_UEVENT_HELPER_PATH=""
 CONFIG_DEVTMPFS=y
+# CONFIG_DEVTMPFS_MOUNT is not set
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
@@ -304,6 +306,7 @@ CONFIG_CRYPTO_DEV_HIFN_795X_RNG=y
 ##
 ## file: drivers/dma/Kconfig
 ##
+# CONFIG_DMADEVICES_DEBUG is not set
 CONFIG_ASYNC_TX_DMA=y
 # CONFIG_DMATEST is not set
 
@@ -329,6 +332,7 @@ CONFIG_FIREWIRE_NET=m
 ## file: drivers/gpio/Kconfig
 ##
 # CONFIG_GPIOLIB is not set
+# CONFIG_DEBUG_GPIO is not set
 
 ##
 ## file: drivers/gpu/drm/Kconfig
@@ -479,6 +483,7 @@ CONFIG_I2C_ISCH=m
 CONFIG_I2C_NFORCE2_S4985=m
 CONFIG_I2C_OCORES=m
 CONFIG_I2C_SIMTEC=m
+# CONFIG_I2C_XILINX is not set
 CONFIG_I2C_TAOS_EVM=m
 CONFIG_I2C_TINY_USB=m
 CONFIG_I2C_PCA_PLATFORM=m
@@ -637,6 +642,10 @@ CONFIG_JOYSTICK_IFORCE_232=y
 ##
 CONFIG_KEYBOARD_ADP5588=m
 CONFIG_KEYBOARD_QT2160=m
+# CONFIG_KEYBOARD_GPIO is not set
+# CONFIG_KEYBOARD_TCA6416 is not set
+# CONFIG_KEYBOARD_MATRIX is not set
+# CONFIG_KEYBOARD_MCS is not set
 CONFIG_QT2160=m
 CONFIG_KEYBOARD_LM8323=m
 CONFIG_KEYBOARD_MAX7359=m
@@ -654,6 +663,7 @@ CONFIG_INPUT_YEALINK=m
 CONFIG_INPUT_CM109=m
 CONFIG_INPUT_WINBOND_CIR=m
 CONFIG_INPUT_PCF50633_PMU=m
+# CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 CONFIG_INPUT_WM831X_ON=m
 
 ##
@@ -663,6 +673,7 @@ CONFIG_MOUSE_PS2_ALPS=y
 CONFIG_MOUSE_PS2_ELANTECH=y
 CONFIG_MOUSE_PS2_SENTELIC=y
 # CONFIG_MOUSE_PS2_TOUCHKIT is not set
+# CONFIG_MOUSE_GPIO is not set
 CONFIG_MOUSE_SYNAPTICS_I2C=m
 
 ##
@@ -768,6 +779,7 @@ CONFIG_LEDS_CLASS=m
 CONFIG_LEDS_NET48XX=m
 CONFIG_LEDS_ALIX2=m
 CONFIG_LEDS_PCA9532=m
+# CONFIG_LEDS_GPIO is not set
 CONFIG_LEDS_LP3944=m
 CONFIG_LEDS_PCA955X=m
 CONFIG_LEDS_WM831X_STATUS=m
@@ -1023,6 +1035,7 @@ CONFIG_I2C_SI470X=y
 ##
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
+# CONFIG_VIDEO_MEM2MEM_TESTDEV is not set
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
@@ -1378,6 +1391,12 @@ CONFIG_EEPROM_MAX6875=m
 CONFIG_EEPROM_93CX6=m
 
 ##
+## file: drivers/misc/iwmc3200top/Kconfig
+##
+# CONFIG_IWMC3200TOP_DEBUG is not set
+# CONFIG_IWMC3200TOP_DEBUGFS is not set
+
+##
 ## file: drivers/mmc/card/Kconfig
 ##
 CONFIG_MMC_BLOCK_BOUNCE=y
@@ -1411,6 +1430,7 @@ CONFIG_MTD_AR7_PARTS=m
 CONFIG_MTD_BLKDEVS=m
 CONFIG_RFD_FTL=m
 CONFIG_SSFDC=m
+# CONFIG_SM_FTL is not set
 CONFIG_MTD_OOPS=m
 
 ##
@@ -1433,6 +1453,7 @@ CONFIG_MTD_LPDDR=m
 ##
 # CONFIG_MTD_ESB2ROM is not set
 # CONFIG_MTD_CK804XROM is not set
+# CONFIG_MTD_GPIO_ADDR is not set
 CONFIG_MTD_INTEL_VR_NOR=m
 CONFIG_MTD_PLATRAM=m
 
@@ -1444,6 +1465,7 @@ CONFIG_MTD_PLATRAM=m
 CONFIG_MTD_NAND_CAFE=m
 CONFIG_MTD_NAND_CS553X=m
 CONFIG_MTD_NAND_NANDSIM=m
+# CONFIG_MTD_NAND_DENALI is not set
 CONFIG_MTD_NAND_RICOH=m
 CONFIG_MTD_ALAUDA=m
 
@@ -1765,6 +1787,7 @@ CONFIG_LIBERTAS_SPI=m
 # CONFIG_LIBERTAS_DEBUG is not set
 CONFIG_LIBERTAS_MESH=y
 CONFIG_LIBERTAS_THINFIRM=m
+# CONFIG_LIBERTAS_THINFIRM_DEBUG is not set
 CONFIG_LIBERTAS_THINFIRM_USB=m
 CONFIG_AIRO=m
 CONFIG_AT76C50X_USB=m
@@ -1850,6 +1873,7 @@ CONFIG_IWLWIFI=m
 CONFIG_IWLWIFI_LEDS=y
 CONFIG_IWLWIFI_SPECTRUM_MEASUREMENT=y
 # CONFIG_IWLWIFI_DEBUG is not set
+# CONFIG_IWLWIFI_DEVICE_TRACING is not set
 CONFIG_IWLAGN=m
 CONFIG_IWL4965=y
 CONFIG_IWL5000=y
@@ -1861,10 +1885,12 @@ CONFIG_IWL3945_SPECTRUM_MEASUREMENT=y
 ##
 CONFIG_IWM=m
 # CONFIG_IWM_DEBUG is not set
+# CONFIG_IWM_TRACING is not set
 
 ##
 ## file: drivers/net/wireless/orinoco/Kconfig
 ##
+# CONFIG_HERMES_PRISM is not set
 CONFIG_HERMES_CACHE_FW_ON_INIT=y
 CONFIG_NORTEL_HERMES=m
 CONFIG_PCMCIA_SPECTRUM=m
@@ -1982,6 +2008,7 @@ CONFIG_SONY_LAPTOP=m
 ## file: drivers/power/Kconfig
 ##
 # CONFIG_POWER_SUPPLY is not set
+# CONFIG_TEST_POWER is not set
 CONFIG_WM831X_POWER=m
 CONFIG_WM8350_POWER=m
 CONFIG_BATTERY_DS2782=m
@@ -1994,6 +2021,7 @@ CONFIG_CHARGER_PCF50633=m
 ##
 CONFIG_PPS=m
 # CONFIG_PPS_DEBUG is not set
+# CONFIG_PPS_CLIENT_KTIMER is not set
 
 ##
 ## file: drivers/regulator/Kconfig
@@ -2243,6 +2271,8 @@ CONFIG_SERIAL_8250_HUB6=m
 CONFIG_SERIAL_8250_MCA=m
 CONFIG_SERIAL_MAX3100=m
 # CONFIG_SERIAL_TIMBERDALE is not set
+# CONFIG_SERIAL_ALTERA_JTAGUART is not set
+# CONFIG_SERIAL_ALTERA_UART is not set
 
 ##
 ## file: drivers/spi/Kconfig
@@ -2251,6 +2281,9 @@ CONFIG_SPI=y
 # CONFIG_SPI_DEBUG is not set
 CONFIG_SPI_BITBANG=m
 CONFIG_SPI_BUTTERFLY=m
+# CONFIG_SPI_GPIO is not set
+# CONFIG_SPI_XILINX is not set
+# CONFIG_SPI_DESIGNWARE is not set
 CONFIG_SPI_LM70_LLP=m
 # CONFIG_SPI_SPIDEV is not set
 CONFIG_SPI_TLE62X0=m
@@ -2705,6 +2738,7 @@ CONFIG_FB_ARC=m
 # CONFIG_FB_INTEL_I2C is not set
 CONFIG_FB_S3=m
 CONFIG_FB_VIA=m
+# CONFIG_FB_VIA_DIRECT_PROCFS is not set
 CONFIG_FB_3DFX=m
 # CONFIG_FB_3DFX_ACCEL is not set
 CONFIG_FB_3DFX_I2C=y
@@ -2902,6 +2936,7 @@ CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
 # CONFIG_CIFS_DEBUG2 is not set
 CONFIG_CIFS_DFS_UPCALL=y
+# CONFIG_CIFS_FSCACHE is not set
 CONFIG_CIFS_EXPERIMENTAL=y
 
 ##
@@ -3097,6 +3132,7 @@ CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
 # CONFIG_NFS_V4_1 is not set
 CONFIG_NFS_FSCACHE=y
+# CONFIG_NFS_USE_LEGACY_DNS is not set
 
 ##
 ## file: fs/nfsd/Kconfig
@@ -3409,6 +3445,7 @@ CONFIG_HZ_250=y
 ##
 CONFIG_PM=y
 CONFIG_PM_DEBUG=y
+# CONFIG_PM_ADVANCED_DEBUG is not set
 # CONFIG_PM_VERBOSE is not set
 CONFIG_SUSPEND=y
 CONFIG_HIBERNATION=y
@@ -3510,15 +3547,19 @@ CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_BOOT_PRINTK_DELAY is not set
 # CONFIG_RCU_TORTURE_TEST is not set
 # CONFIG_RCU_CPU_STALL_DETECTOR is not set
+# CONFIG_KPROBES_SANITY_TEST is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
+# CONFIG_LKDTM is not set
+# CONFIG_CPU_NOTIFIER_ERROR_INJECT is not set
 # CONFIG_FAULT_INJECTION is not set
 # CONFIG_LATENCYTOP is not set
 CONFIG_SYSCTL_SYSCALL_CHECK=y
 # CONFIG_FIREWIRE_OHCI_REMOTE_DMA is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DMA_API_DEBUG is not set
+# CONFIG_ATOMIC64_SELFTEST is not set
 
 ##
 ## file: lib/Kconfig.kgdb
@@ -3543,11 +3584,13 @@ CONFIG_HWPOISON_INJECT=m
 CONFIG_NET=y
 CONFIG_INET=y
 CONFIG_NETWORK_SECMARK=y
+# CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NET_PKTGEN=m
+# CONFIG_NET_TCPPROBE is not set
 CONFIG_NET_DROP_MONITOR=y
 CONFIG_WIRELESS=y
 
@@ -3627,6 +3670,11 @@ CONFIG_BRIDGE_EBT_SNAT=m
 CONFIG_BRIDGE_EBT_LOG=m
 CONFIG_BRIDGE_EBT_ULOG=m
 CONFIG_BRIDGE_EBT_NFLOG=m
+
+##
+## file: net/caif/Kconfig
+##
+# CONFIG_CAIF is not set
 
 ##
 ## file: net/can/Kconfig
