Explicitly set CONFIG_DEFAULT_SECURITY
svn path=/dists/trunk/linux-2.6/; revision=16387

--- a/debian/config/config
+++ b/debian/config/config
@@ -4156,6 +4156,10 @@ CONFIG_SECURITY_FILE_CAPABILITIES=y
 # CONFIG_SECURITY_ROOTPLUG is not set
 # CONFIG_INTEL_TXT is not set
 CONFIG_LSM_MMAP_MIN_ADDR=32768
+# CONFIG_SECURITY_APPARMOR is not set
+CONFIG_DEFAULT_SECURITY_SELINUX=y
+# CONFIG_DEFAULT_SECURITY_TOMOYO is not set
+# CONFIG_DEFAULT_SECURITY_DAC is not set
 
 ##
 ## file: security/integrity/ima/Kconfig
