Explicitly set LOCKUP_DETECTOR (enabled by default in 2.6.35, not any more)
svn path=/dists/trunk/linux-2.6/; revision=16390

--- a/debian/config/config
+++ b/debian/config/config
@@ -3520,6 +3520,7 @@ CONFIG_UNUSED_SYMBOLS=y
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 CONFIG_DEBUG_KERNEL=y
+CONFIG_LOCKUP_DETECTOR=y
 # CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC is not set
 CONFIG_DETECT_HUNG_TASK=y
 # CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
