Enable various new driver modules and driver options
svn path=/dists/trunk/linux-2.6/; revision=16392

--- a/debian/config/config
+++ b/debian/config/config
@@ -164,6 +164,7 @@ CONFIG_PATA_SCH=m
 ## file: drivers/atm/Kconfig
 ##
 CONFIG_ATM_DUMMY=m
+CONFIG_ATM_NICSTAR=m
 CONFIG_ATM_IA=m
 # CONFIG_ATM_IA_DEBUG is not set
 CONFIG_ATM_FORE200E=m
@@ -214,6 +215,7 @@ CONFIG_BLK_DEV_DRBD=m
 ##
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTSDIO=m
+CONFIG_BT_HCIUART_ATH3K=y
 CONFIG_BT_HCIUART_LL=y
 CONFIG_BT_MRVL=m
 CONFIG_BT_MRVL_SDIO=m
@@ -327,6 +329,7 @@ CONFIG_FIREWIRE=m
 CONFIG_FIREWIRE_OHCI=m
 CONFIG_FIREWIRE_SBP2=m
 CONFIG_FIREWIRE_NET=m
+CONFIG_FIREWIRE_NOSY=m
 
 ##
 ## file: drivers/gpio/Kconfig
@@ -1357,6 +1360,7 @@ CONFIG_LPC_SCH=m
 ##
 CONFIG_MISC_DEVICES=y
 CONFIG_AD525X_DPOT=m
+CONFIG_AD525X_DPOT_I2C=m
 CONFIG_SGI_IOC4=m
 CONFIG_TIFM_CORE=m
 CONFIG_TIFM_7XX1=m
@@ -1368,6 +1372,7 @@ CONFIG_SGI_GRU=m
 CONFIG_ISL29003=m
 CONFIG_TI_DAC7512=m
 CONFIG_VMWARE_BALLOON=m
+CONFIG_RAMOOPS=m
 
 ##
 ## file: drivers/misc/c2port/Kconfig
@@ -1453,6 +1458,7 @@ CONFIG_MTD_LPDDR=m
 ##
 # CONFIG_MTD_ESB2ROM is not set
 # CONFIG_MTD_CK804XROM is not set
+CONFIG_MTD_PCMCIA=m
 # CONFIG_MTD_GPIO_ADDR is not set
 CONFIG_MTD_INTEL_VR_NOR=m
 CONFIG_MTD_PLATRAM=m
@@ -1557,6 +1563,7 @@ CONFIG_CHELSIO_T1=m
 CONFIG_CHELSIO_T1_1G=y
 CONFIG_CHELSIO_T3=m
 CONFIG_CHELSIO_T4=m
+CONFIG_CHELSIO_T4VF=m
 CONFIG_ENIC=m
 CONFIG_IXGBE=m
 CONFIG_IXGBE_DCA=y
@@ -1635,6 +1642,7 @@ CONFIG_CAN_PLX_PCI=m
 ## file: drivers/net/can/usb/Kconfig
 ##
 CONFIG_CAN_EMS_USB=m
+CONFIG_CAN_ESD_USB2=m
 
 ##
 ## file: drivers/net/hamradio/Kconfig
@@ -1894,6 +1902,7 @@ CONFIG_IWM=m
 CONFIG_HERMES_CACHE_FW_ON_INIT=y
 CONFIG_NORTEL_HERMES=m
 CONFIG_PCMCIA_SPECTRUM=m
+CONFIG_ORINOCO_USB=m
 
 ##
 ## file: drivers/net/wireless/p54/Kconfig
@@ -1929,6 +1938,8 @@ CONFIG_WL1251=m
 CONFIG_WL1251_SPI=m
 CONFIG_WL1251_SDIO=m
 CONFIG_WL1271=m
+CONFIG_WL1271_SPI=m
+CONFIG_WL1271_SDIO=m
 
 ##
 ## file: drivers/net/wireless/zd1211rw/Kconfig
@@ -2027,6 +2038,7 @@ CONFIG_CHARGER_PCF50633=m
 CONFIG_PPS=m
 # CONFIG_PPS_DEBUG is not set
 # CONFIG_PPS_CLIENT_KTIMER is not set
+CONFIG_PPS_CLIENT_LDISC=m
 
 ##
 ## file: drivers/regulator/Kconfig
@@ -2275,6 +2287,7 @@ CONFIG_SERIAL_8250_BOCA=m
 CONFIG_SERIAL_8250_HUB6=m
 CONFIG_SERIAL_8250_MCA=m
 CONFIG_SERIAL_MAX3100=m
+CONFIG_SERIAL_MFD_HSU=m
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
 # CONFIG_SERIAL_ALTERA_UART is not set
