Enable various new driver modules and driver options
svn path=/dists/trunk/linux-2.6/; revision=16395

--- a/debian/config/config
+++ b/debian/config/config
@@ -363,7 +363,9 @@ CONFIG_DRM_VMWGFX=m
 ## file: drivers/hid/Kconfig
 ##
 CONFIG_HID_3M_PCT=m
+CONFIG_HID_ACRUX_FF=m
 CONFIG_HID_CANDO=m
+CONFIG_HID_ELECOM=m
 CONFIG_HID_PRODIKEYS=m
 CONFIG_DRAGONRISE_FF=y
 CONFIG_HID_DRAGONRISE=m
@@ -549,6 +551,11 @@ CONFIG_INFINIBAND_CXGB3=m
 # CONFIG_INFINIBAND_CXGB3_DEBUG is not set
 
 ##
+## file: drivers/infiniband/hw/cxgb4/Kconfig
+##
+CONFIG_INFINIBAND_CXGB4=m
+
+##
 ## file: drivers/infiniband/hw/ipath/Kconfig
 ##
 CONFIG_INFINIBAND_IPATH=m
@@ -569,6 +576,10 @@ CONFIG_INFINIBAND_MTHCA_DEBUG=y
 ##
 CONFIG_INFINIBAND_NES=m
 # CONFIG_INFINIBAND_NES_DEBUG is not set
+
+##
+## file: drivers/infiniband/hw/qib/Kconfig
+CONFIG_INFINIBAND_QIB=m
 
 ##
 ## file: drivers/infiniband/ulp/ipoib/Kconfig
@@ -1206,8 +1217,10 @@ CONFIG_USB_GSPCA_SPCA505=m
 CONFIG_USB_GSPCA_SPCA506=m
 CONFIG_USB_GSPCA_SPCA508=m
 CONFIG_USB_GSPCA_SPCA561=m
+CONFIG_USB_GSPCA_SPCA1528=m
 CONFIG_USB_GSPCA_SQ905=m
 CONFIG_USB_GSPCA_SQ905C=m
+CONFIG_USB_GSPCA_SQ930X=m
 CONFIG_USB_GSPCA_STK014=m
 CONFIG_USB_GSPCA_STV0680=m
 CONFIG_USB_GSPCA_SUNPLUS=m
@@ -2572,6 +2585,7 @@ CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_UIO_AEC=m
 CONFIG_UIO_SERCOS3=m
 CONFIG_UIO_PCI_GENERIC=m
+CONFIG_UIO_NETX=m
 
 ##
 ## file: drivers/usb/Kconfig
@@ -2699,6 +2713,7 @@ CONFIG_USB_SERIAL_KLSI=m
 CONFIG_USB_SERIAL_KOBIL_SCT=m
 CONFIG_USB_SERIAL_MCT_U232=m
 CONFIG_USB_SERIAL_MOS7720=m
+CONFIG_USB_SERIAL_MOS7715_PARPORT=y
 CONFIG_USB_SERIAL_MOS7840=m
 CONFIG_USB_SERIAL_MOTOROLA=m
 CONFIG_USB_SERIAL_NAVMAN=m
@@ -2720,6 +2735,8 @@ CONFIG_USB_SERIAL_OPTION=m
 CONFIG_USB_SERIAL_OMNINET=m
 CONFIG_USB_SERIAL_OPTICON=m
 CONFIG_USB_SERIAL_VIVOPAY_SERIAL=m
+CONFIG_USB_SERIAL_ZIO=m
+CONFIG_USB_SERIAL_SSU100=m
 CONFIG_USB_SERIAL_DEBUG=m
 
 ##
