Enable ATM_NICSTAR driver options
svn path=/dists/trunk/linux-2.6/; revision=16396

--- a/debian/config/config
+++ b/debian/config/config
@@ -165,6 +165,8 @@ CONFIG_PATA_SCH=m
 ##
 CONFIG_ATM_DUMMY=m
 CONFIG_ATM_NICSTAR=m
+CONFIG_ATM_NICSTAR_USE_SUNI=y
+CONFIG_ATM_NICSTAR_USE_IDT77105=y
 CONFIG_ATM_IA=m
 # CONFIG_ATM_IA_DEBUG is not set
 CONFIG_ATM_FORE200E=m
