[x86] Enable modular IDEAPAD_ACPI (Closes: #599444)
svn path=/dists/trunk/linux-2.6/; revision=16417

--- a/debian/config/kernelarch-x86/config
+++ b/debian/config/kernelarch-x86/config
@@ -973,6 +973,7 @@ CONFIG_ACER_WMI=m
 CONFIG_ACERHDF=m
 CONFIG_DELL_WMI=m
 CONFIG_SONYPI_COMPAT=y
+CONFIG_IDEAPAD_ACPI=m
 CONFIG_THINKPAD_ACPI=m
 CONFIG_THINKPAD_ACPI_ALSA_SUPPORT=y
 # CONFIG_THINKPAD_ACPI_DEBUGFACILITIES is not set
