--- a/debian/config/config
+++ b/debian/config/config
@@ -26,6 +26,7 @@ CONFIG_DEFAULT_CFQ=y
 CONFIG_CRYPTO=y
 CONFIG_CRYPTO_FIPS=y
 CONFIG_CRYPTO_MANAGER=y
+CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=n
 CONFIG_CRYPTO_GF128MUL=m
 CONFIG_CRYPTO_NULL=m
 # CONFIG_CRYPTO_CRYPTD is not set
