--- a/debian/config/kernelarch-x86/config
+++ b/debian/config/kernelarch-x86/config
@@ -393,9 +393,9 @@ CONFIG_DRM=m
 CONFIG_DRM_TDFX=m
 CONFIG_DRM_R128=m
 CONFIG_DRM_RADEON=m
-CONFIG_DRM_I810=m
+# CONFIG_DRM_I810 is not set
 ## choice: Intel 830M, 845G, 852GM, 855GM, 865G
-CONFIG_DRM_I830=m
+# CONFIG_DRM_I830 is not set
 CONFIG_DRM_I915=m
 # CONFIG_DRM_I915_KMS is not set
 ## end choice
