--- a/debian/config/config
+++ b/debian/config/config
@@ -133,7 +133,7 @@ CONFIG_PATA_IT821X=m
 CONFIG_PATA_JMICRON=m
 CONFIG_PATA_MARVELL=m
 # CONFIG_PATA_NETCELL is not set
-# CONFIG_PATA_NINJA32 is not set
+CONFIG_PATA_NINJA32=m
 # CONFIG_PATA_NS87415 is not set
 # CONFIG_PATA_OLDPIIX is not set
 # CONFIG_PATA_OPTIDMA is not set
@@ -545,7 +545,6 @@ CONFIG_I2C_TINY_USB=m
 CONFIG_IDE_GD=m
 CONFIG_IDE_GD_ATA=y
 CONFIG_IDE_GD_ATAPI=y
-CONFIG_BLK_DEV_DELKIN=m
 # CONFIG_IDE_TASK_IOCTL is not set
 CONFIG_IDE_PROC_FS=y
 # CONFIG_BLK_DEV_PLATFORM is not set
