--- a/debian/config/powerpc/config
+++ b/debian/config/powerpc/config
@@ -79,6 +79,8 @@ CONFIG_PREP_RESIDUAL=y
 ## file: drivers/ata/Kconfig
 ##
 CONFIG_ATA=y
+CONFIG_PATA_HPT366=m
+CONFIG_PATA_HPT37X=m
 CONFIG_PATA_MACIO=y
 CONFIG_PATA_NETCELL=m
 CONFIG_PATA_NS87415=m
@@ -87,6 +89,7 @@ CONFIG_PATA_PDC_OLD=m
 CONFIG_PATA_SC1200=m
 CONFIG_PATA_SIL680=m
 CONFIG_PATA_VIA=m
+CONFIG_PATA_WINBOND=m
 CONFIG_PATA_NS87410=m
 CONFIG_PATA_PCMCIA=m
 
@@ -292,7 +295,7 @@ CONFIG_BLK_DEV_IDETAPE=m
 # CONFIG_BLK_DEV_CY82C693 is not set
 # CONFIG_BLK_DEV_CS5520 is not set
 # CONFIG_BLK_DEV_CS5530 is not set
-CONFIG_BLK_DEV_HPT366=m
+# CONFIG_BLK_DEV_HPT366 is not set
 # CONFIG_BLK_DEV_SC1200 is not set
 # CONFIG_BLK_DEV_PIIX is not set
 # CONFIG_BLK_DEV_NS87415 is not set
@@ -300,7 +303,7 @@ CONFIG_BLK_DEV_HPT366=m
 # CONFIG_BLK_DEV_PDC202XX_NEW is not set
 # CONFIG_BLK_DEV_SVWKS is not set
 # CONFIG_BLK_DEV_SIIMAGE is not set
-CONFIG_BLK_DEV_SL82C105=m
+# CONFIG_BLK_DEV_SL82C105 is not set
 # CONFIG_BLK_DEV_SLC90E66 is not set
 CONFIG_BLK_DEV_TRM290=m
 # CONFIG_BLK_DEV_VIA82CXXX is not set
