--- a/debian/config/hppa/config
+++ b/debian/config/hppa/config
@@ -23,6 +23,12 @@ CONFIG_PARISC_PAGE_SIZE_4KB=y
 # CONFIG_DEBUG_RODATA is not set
 
 ##
+## file: drivers/ata/Kconfig
+##
+CONFIG_PATA_NS87415=m
+CONFIG_PATA_LEGACY=m
+
+##
 ## file: drivers/block/Kconfig
 ##
 # CONFIG_BLK_DEV_FD is not set
@@ -96,7 +102,7 @@ CONFIG_IDE_GD=m
 # CONFIG_BLK_DEV_IDECS is not set
 CONFIG_BLK_DEV_IDECD=m
 # CONFIG_BLK_DEV_IDETAPE is not set
-CONFIG_IDE_GENERIC=m
+# CONFIG_IDE_GENERIC is not set
 # CONFIG_BLK_DEV_OFFBOARD is not set
 # CONFIG_BLK_DEV_GENERIC is not set
 # CONFIG_BLK_DEV_OPTI621 is not set
@@ -111,7 +117,7 @@ CONFIG_IDE_GENERIC=m
 # CONFIG_BLK_DEV_HPT366 is not set
 # CONFIG_BLK_DEV_SC1200 is not set
 # CONFIG_BLK_DEV_PIIX is not set
-CONFIG_BLK_DEV_NS87415=m
+# CONFIG_BLK_DEV_NS87415 is not set
 # CONFIG_BLK_DEV_PDC202XX_OLD is not set
 # CONFIG_BLK_DEV_PDC202XX_NEW is not set
 # CONFIG_BLK_DEV_SVWKS is not set
