Disable old IDE subsystem [!ia64,m68k]
svn path=/dists/sid/linux-2.6/; revision=18705

--- a/debian/config/config
+++ b/debian/config/config
@@ -542,6 +542,8 @@ CONFIG_I2C_TINY_USB=m
 ##
 ## file: drivers/ide/Kconfig
 ##
+# CONFIG_IDE is not set
+#. But for ia64 and m68k flavours that need it
 CONFIG_IDE_GD=m
 CONFIG_IDE_GD_ATA=y
 CONFIG_IDE_GD_ATAPI=y
@@ -549,10 +551,7 @@ CONFIG_IDE_GD_ATAPI=y
 CONFIG_IDE_PROC_FS=y
 # CONFIG_BLK_DEV_PLATFORM is not set
 # CONFIG_BLK_DEV_JMICRON is not set
-CONFIG_BLK_DEV_IT8172=m
-CONFIG_BLK_DEV_IT8213=m
 # CONFIG_BLK_DEV_IT821X is not set
-CONFIG_BLK_DEV_TC86C001=m
 
 ##
 ## file: drivers/idle/Kconfig
