Correct CONFIG_PATA_PDC202XX_OLD to CONFIG_PATA_PDC_OLD
svn path=/dists/sid/linux-2.6/; revision=18713

--- a/debian/config/sparc/config
+++ b/debian/config/sparc/config
@@ -26,6 +26,7 @@ CONFIG_PATA_CS5530=m
 CONFIG_PATA_NETCELL=m
 CONFIG_PATA_NS87415=m
 CONFIG_PATA_PDC2027X=m
+CONFIG_PATA_PDC_OLD=m
 CONFIG_PATA_SERVERWORKS=m
 CONFIG_PATA_SIL680=m
 CONFIG_PATA_VIA=m
@@ -686,5 +687,4 @@ CONFIG_SND_SUN_DBRI=m
 ##
 CONFIG_MYRI_SBUS=m
 CONFIG_NET_PCI=y
-CONFIG_PATA_PDC202XX_OLD=m
 
