debian/config/kernelarch-mips/config, debian/config/mips/config, debian/config/mipsel/config: Move common mips options.
svn path=/dists/sid/linux-2.6/; revision=18714

--- a/debian/config/kernelarch-mips/config
+++ b/debian/config/kernelarch-mips/config
@@ -1,4 +1,14 @@
 ##
+## file: arch/mips/Kconfig
+##
+CONFIG_SECCOMP=y
+
+##
+## file: drivers/net/ethernet/sun/Kconfig
+##
+# CONFIG_NIU is not set
+
+##
 ## file: fs/ext2/Kconfig
 ##
 # CONFIG_EXT2_FS is not set
