[i386] Re-enable INTEL_IOMMU, IRQ_REMAP
svn path=/dists/sid/linux-2.6/; revision=18717

--- a/debian/config/kernelarch-x86/config
+++ b/debian/config/kernelarch-x86/config
@@ -584,6 +584,13 @@ CONFIG_SERIO_RAW=m
 CONFIG_INPUT_TOUCHSCREEN=y
 
 ##
+## file: drivers/iommu/Kconfig
+##
+CONFIG_INTEL_IOMMU=y
+# CONFIG_INTEL_IOMMU_DEFAULT_ON is not set
+CONFIG_IRQ_REMAP=y
+
+##
 ## file: drivers/isdn/Kconfig
 ##
 CONFIG_ISDN=y
@@ -1738,10 +1745,7 @@ CONFIG_SND_HDA_INTEL=m
 ##
 ## file: unknown
 ##
-CONFIG_DMAR=y
-# CONFIG_DMAR_DEFAULT_ON is not set
 # CONFIG_ET131X_DEBUG is not set
-CONFIG_INTR_REMAP=y
 # CONFIG_MTD_DEBUG is not set
 CONFIG_POHMELFS_CRYPTO=y
 # CONFIG_XEN_DEBUG is not set
