Switch ro full preempt
Signed-off-by: Yang Bo <yangbo@deepin.com>

--- a/debian/config/config
+++ b/debian/config/config
@@ -5733,8 +5733,9 @@ CONFIG_PM_ADVANCED_DEBUG=y
 ##
 ## choice: Preemption Model
 # CONFIG_PREEMPT_NONE is not set
-CONFIG_PREEMPT_VOLUNTARY=y
-# CONFIG_PREEMPT is not set
+# CONFIG_PREEMPT_VOLUNTARY is not set
+CONFIG_PREEMPT=y
+CONFIG_PREEMPT_COUNT=y
 ## end choice
 
 ##
